<resources>
    <string name="app_name">NeWork</string>
    <string name="post_author_name">Leo Lipshutz</string>
    <string name="post_date">21.02.22 14:23</string>
    <string name="post_description">Шляпа — это головной убор, который носили в Древней Греции. В наше время шляпы носят для защиты от солнца или просто для красоты.</string>
    <string name="post_likes_count">10</string>
    <string name="post_share">Поделиться</string>

    <!-- Accessibility descriptions -->
    <string name="desc_avatar">Аватар автора</string>
    <string name="desc_more_options">Дополнительные опции</string>
    <string name="desc_post_media">Изображение поста</string>
    <string name="user_avatar">User avatar</string>
    <string name="menu_button">Menu button</string>
    <string name="video_preview">Video preview</string>
    <string name="image_preview">Image preview</string>
    <string name="play_button">Play button</string>
    <string name="share_icon">Share icon</string>
    <string name="synchronization_icon">Synchronization icon</string>
    <string name="like_icon">Like icon</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="empty_jobs">There are no jobs.</string>
    <string name="add_post">Add post</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network error</string>
    <string name="remove">Remove</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="photo">Photo</string>
    <string name="chooser_share_post">Share post</string>
    <string name="retry_loading">Retry loading</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>


    <!-- Strings related to login/registration -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_button">Sign in</string>
    <string name="choose_photo_button">Choose photo</string>
    <string name="name">Name</string>
    <string name="login_field">Login</string>
    <string name="password_field">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_avatar">Select avatar</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>

    <!-- Фрагмент детального просмотра события-->
    <string name="speakers">Speakers</string>
    <string name="likers">Likers</string>
    <string name="participants">Participants</string>
    <string name="event_cover">Event cover image</string>
    <string name="participants_icon">Participants icon</string>
    <string name="job_searching">В поисках работы</string>
    <string name="participate_button">Participate</string>

    <!-- Добавлены, но не отсортированы -->
    <string name="publish">Publish</string>
    <string name="save">Save</string>
    <string name="jobs">Jobs</string>
    <string name="wall">Wall</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="error">Error</string>
    <string name="retry_button">Retry</string>
    <string name="date_divider">–</string>
    <string name="delete_button">Delete button</string>
    <string name="no_events">There are no events yet. Be the first to create one!</string>
    <string name="add_event_button">Add event button</string>
    <string name="users_list_button">Users list button</string>
    <string name="choose_the_date">Choose the date</string>
    <string name="add_place">Add place</string>
    <string name="add_user">Add User</string>
    <string name="choose_file">Choose file</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="event_type_online">ONLINE</string>
    <string name="event_type_offline">OFFLIEN</string>
    <string name="share_event">Share event</string>
    <string name="tap_map_to_pick_location">Нажмите на карту, чтобы выбрать место</string>
    <string name="mentioned">Mentioned</string>
    <string name="error_empty_content">No content to share</string>
    <string name="no_users">No users found</string>
    <string name="users_list">Users</string>
</resources>